--- a/Desktop/PassApp/src/sample/source-tile.fxml
+++ b/Desktop/PassApp/src/sample/source-tile.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 
 
-<HBox stylesheets="@stylesheet.css" alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="156.0" prefWidth="601.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<HBox stylesheets="@stylesheet.css" fx:id="sourceTileHbox" styleClass="listCell" alignment="CENTER_LEFT" maxHeight="Infinity" maxWidth="Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="156.0" prefWidth="301.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label id="sourceTitle" fx:id="sourceTitleFx" text="Source" styleClass="sourceFont">
          <HBox.margin>
