--- a/Desktop/PassApp/src/sample/stylesheet.css
+++ b/Desktop/PassApp/src/sample/stylesheet.css
@@ -8,6 +8,15 @@
 	-fx-border-width: 1px;
 }
 
+.sourceButton:hover {
+	-fx-background-color: orangered;
+	-fx-font-size: 20px;
+}
+
+.sourceButton:pressed {
+	-fx-font-size:15px;
+}
+
 #sourceActionsTitleBox {
 	-fx-background-color: rgb(190, 190, 190);
 	-fx-border-color: black;
@@ -40,6 +49,7 @@
 
 .sourceFont {
 	-fx-font-size: 30px;
+	-fx-font-family: sans-serif;
 }
 
 .scroll-pane > .viewport {
@@ -48,4 +58,28 @@
 
 .scroll-pane {
 	-fx-background-color: transparent;
+}
+
+.listCell {
+	-fx-border-width: 2px;
+	-fx-border-color: black;
+}
+
+/* List View Style /////////////////////////////////////////////////////////////////*/
+.list-cell:odd {
+	-fx-background-color: white;
+}
+
+.list-cell:even { /* <=== changed to even */
+	-fx-background-color: white;
+}
+
+.list-cell:filled:selected:focused, .list-cell:filled:selected {
+	-fx-background-color: linear-gradient(#328BDB 0%, #207BCF 25%, #1973C9 75%, #0A65BF 100%);
+	-fx-text-fill: white;
+}
+
+.list-cell:filled:hover {
+	-fx-background-color: #0093ff;
+	-fx-text-fill: white;
 }
