Pings server for GET request, parses response and displays to source list view; click on source will display its accounts in account list view; mouse hover on account will display password

--- a/Desktop/PassApp/src/passapp/views/new-main.fxml
+++ b/Desktop/PassApp/src/passapp/views/new-main.fxml
@@ -6,7 +6,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="898.0" prefWidth="1309.0" stylesheets="@../stylesheet.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="passapp.controllers.Controller">
+<BorderPane fx:id="rootWindowFx" maxHeight="Infinity" maxWidth="Infinity" minHeight="0" minWidth="0" prefHeight="898.0" prefWidth="1309.0" stylesheets="@../stylesheet.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="passapp.controllers.Controller">
 
     <top>
         <VBox alignment="CENTER" prefHeight="153.0" prefWidth="1880.0" BorderPane.alignment="CENTER">
@@ -75,20 +75,20 @@
     </right>
 
     <center>
-        <AnchorPane prefHeight="346.0" prefWidth="787.0" BorderPane.alignment="CENTER">
+        <AnchorPane fx:id="centerAnchorFx" prefHeight="346.0" prefWidth="787.0" minWidth="0" minHeight="0" BorderPane.alignment="CENTER" >
             <children>
-                <SplitPane id="splitPane" disable="false" dividerPositions="0.47" prefHeight="160.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                <SplitPane fx:id="splitPaneFx" id="splitPane" disable="false" dividerPositions="0.47" prefHeight="160.0" prefWidth="200.0" minWidth="0" minHeight="0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <items>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="1031.0" prefWidth="1028.0" SplitPane.resizableWithParent="false">
+                        <AnchorPane minHeight="0" minWidth="0" prefHeight="1031.0" prefWidth="1028.0" SplitPane.resizableWithParent="false">
                             <children>
-                                <ListView id="sourceListView" fx:id="sourceListViewFx" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                <ListView id="sourceListView" fx:id="sourceListViewFx" prefHeight="200.0" prefWidth="200.0" minHeight="0" minWidth="0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                             </children>
                         </AnchorPane>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="524.0" prefWidth="597.0" SplitPane.resizableWithParent="false">
+                        <AnchorPane minHeight="0" minWidth="0" prefHeight="524.0" prefWidth="597.0" SplitPane.resizableWithParent="false">
                             <children>
-                                <StackPane fx:id="accountStackPaneFx" prefHeight="150.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                <StackPane fx:id="accountStackPaneFx" prefHeight="150.0" prefWidth="200.0" minHeight="0" minWidth="0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                     <children>
-                                        <ListView id="accountListView" fx:id="accountListViewFx" prefHeight="200.0" prefWidth="200.0" />
+                                        <ListView id="accountListView" fx:id="accountListViewFx" prefHeight="200.0" prefWidth="200.0" minHeight="0" minWidth="0" />
                                     </children>
                                 </StackPane>
                             </children>
