Added properties file; prop file stores storage policy; added sync menu item for server sync

--- a/Desktop/PassApp/src/passapp/stylesheet.css
+++ b/Desktop/PassApp/src/passapp/stylesheet.css
@@ -108,3 +108,12 @@
 #messageLabelFx {
 	-fx-text-fill: red;
 }
+
+.normalText {
+	-fx-font-family: sans-serif;
+	-fx-font-size: 25px;
+}
+
+#cancelSourceFx {
+	-fx-background-color: red;
+}
