--- a/Desktop/PassApp/src/passapp/views/add-account-dialog.fxml
+++ b/Desktop/PassApp/src/passapp/views/add-account-dialog.fxml
@@ -5,7 +5,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="195.0" prefWidth="369.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="195.0" prefWidth="369.0" stylesheets="@../stylesheet.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <HBox alignment="CENTER" prefHeight="76.0" prefWidth="369.0">
          <children>
@@ -43,10 +43,10 @@
       <HBox alignment="BOTTOM_RIGHT" prefHeight="52.0" prefWidth="369.0" spacing="10.0">
          <children>
             <Button text="OK" fx:id="okButtonFx" />
-            <Button text="Cancel" fx:id="cancelButtonFx" />
+            <Button text="Cancel" fx:id="cancelButtonFx" styleClass="cancelButton" />
          </children>
          <padding>
-            <Insets bottom="10.0" right="30.0" />
+            <Insets bottom="10.0" right="10.0" />
          </padding>
       </HBox>
    </children>
