--- a/Desktop/PassApp/src/passapp/views/add-source.fxml
+++ b/Desktop/PassApp/src/passapp/views/add-source.fxml
@@ -5,37 +5,71 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="223.0" prefWidth="426.0" stylesheets="@../stylesheet.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="267.0" prefWidth="463.0" stylesheets="@../stylesheet.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <HBox alignment="CENTER" prefHeight="67.0" prefWidth="426.0">
          <children>
             <Label text="Creat New Source" />
          </children>
       </HBox>
-      <HBox alignment="CENTER" prefHeight="69.0" prefWidth="426.0" spacing="20.0">
+      <HBox prefHeight="115.0" prefWidth="463.0" spacing="20.0">
          <children>
-            <Label text="Source Name:" />
-            <TextField fx:id="newSourceTfFx" onMouseClicked="#onTextFieldClicked"/>
+            <VBox prefHeight="109.0" prefWidth="226.0">
+               <children>
+                  <HBox alignment="CENTER" prefHeight="53.0" prefWidth="226.0">
+                     <children>
+                        <Label text="Source" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="TOP_CENTER" prefHeight="56.0" prefWidth="226.0" spacing="10.0">
+                     <children>
+                        <Label text="Name:" />
+                        <TextField fx:id="newSourceTfFx" onMouseClicked="#onTextFieldClicked" />
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
+            <VBox prefHeight="109.0" prefWidth="217.0">
+               <children>
+                  <HBox alignment="CENTER" prefHeight="44.0" prefWidth="217.0">
+                     <children>
+                        <Label text="Account" />
+                     </children>
+                  </HBox>
+                  <HBox prefHeight="32.0" prefWidth="217.0" spacing="10.0">
+                     <children>
+                        <Label text="Username:" />
+                        <TextField fx:id="accountUsernameFx" onMouseClicked="#onTextFieldClicked"/>
+                     </children>
+                  </HBox>
+                  <HBox prefHeight="33.0" prefWidth="217.0" spacing="10.0">
+                     <children>
+                        <Label text="Password:" />
+                        <TextField fx:id="accountPasswordFx" onMouseClicked="#onTextFieldClicked"/>
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
          </children>
       </HBox>
-      <HBox alignment="BOTTOM_CENTER" prefHeight="49.0" prefWidth="426.0" spacing="20.0">
+      <VBox alignment="CENTER" prefHeight="37.0" prefWidth="426.0">
          <children>
-            <Button fx:id="createSourceFx" mnemonicParsing="false" onMouseClicked="#onCreateClicked" text="Create">
-               <HBox.margin>
-                  <Insets />
-               </HBox.margin>
-            </Button>
-            <Button fx:id="cancelSourceFx" mnemonicParsing="false" onMouseClicked="#onCancelClicked" text="Cancel">
-               <HBox.margin>
-                  <Insets />
-               </HBox.margin>
-            </Button>
+            <HBox alignment="BOTTOM_CENTER" prefHeight="72.0" prefWidth="463.0" spacing="20.0">
+               <children>
+                  <Button fx:id="createSourceFx" mnemonicParsing="false" onMouseClicked="#onCreateClicked" text="Create">
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="cancelSourceFx" styleClass="cancelButton" mnemonicParsing="false" onMouseClicked="#onCancelClicked" text="Cancel">
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                  </Button>
+               </children>
+            </HBox>
+            <Label fx:id="messageLabelFx" text="" />
          </children>
-      </HBox>
-      <HBox alignment="CENTER" prefHeight="37.0" prefWidth="426.0">
-         <children>
-            <Label text="" fx:id="messageLabelFx" />
-         </children>
-      </HBox>
+      </VBox>
    </children>
 </VBox>
